<resources>
    <string name="app_name">SkinCareAddict</string>

    <!--- Section Names -->
    <string name="title_section1">Tracker</string>
    <string name="title_section2">My Routine</string>
    <string name="title_section3">My Products</string>
    <string name="title_section4">Tools</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--- Tools -->
    <string name="button_timer">Timer</string>

    <!--- My Products -->
    <string name="my_cabinet">My Cabinet:</string>
    <string name="choose_product_type">Filter by Type:</string>
    <string name="new_product">New Product</string>
    <string name="no_items">Eeek! I'm empty.</string>

    <string-array
        name="types_of_products_filter">
        <item>All</item>
        <item>Cleanser</item>
        <item>Exfoliation</item>
        <item>Serum</item>
        <item>Spot Treatment</item>
        <item>Sunscreen</item>
        <item>Mask</item>
        <item>Oil</item>
        <item>Other</item>
    </string-array>

    <!--- New Product -->
    <string name="name">Name</string>
    <string name="make_new_product">Create a new product:</string>
    <string name="spf">SPF</string>
    <string name="pH">pH</string>
    <string name="exp_date">Expiration Date</string>
    <string name="key_ingredients">Key Ingredients</string>
    <string name="my_rating">My Rating</string>
    <string name="comments">Comments</string>
    <string name="done">Done</string>

    <string-array
        name="types_of_products">
        <item>Cleanser</item>
        <item>Exfoliation</item>
        <item>Serum</item>
        <item>Spot Treatment</item>
        <item>Sunscreen</item>
        <item>Mask</item>
        <item>Oil</item>
        <item>Other</item>
    </string-array>

</resources>
