<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_cabinet"
        android:id="@+id/txtlbl1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/choose_product_type"
        android:id="@+id/txtlbl2"
        android:layout_below="@+id/txtlbl1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spProductTypeFilter"
        android:spinnerMode="dropdown"
        android:entries="@array/types_of_products_filter"
        android:clickable="true"
        android:layout_alignTop="@+id/txtlbl2"
        android:layout_toRightOf="@+id/txtlbl1"
        android:layout_toEndOf="@+id/txtlbl1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_product"
        android:id="@+id/btnAddProduct"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_my_products"
        android:layout_above="@+id/btnAddProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/spProductTypeFilter" />

</RelativeLayout>